feat(ENG-137): update and activate counterparties
